--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "~3.16.1",
     "expect": "~1.18.0",
     "expect-jsx": "~2.5.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "~0.8.5",
     "intl": "~1.1.0",
     "jsdom": "~8.5.0",
