--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ci": "npm test && npm run build",
     "release": "node ./npm_scripts/release.js",
     "verify": "node ./npm_scripts/verify.js",
-    "postinstall": "cp ./node_modules/@pearson-components/npm-scripts/npm_scripts/*.js ./npm_scripts"
+    "postinstall": "cp ./node_modules/@pearson-components/npm-scripts/npm_scripts/*.js ./npm_scripts",
+    "postpublish": "npm access public && echo 'Package scope set to public!'"
   },
   "author": "",
   "license": "MIT",
