--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./main.js",
   "scripts": {
     "dev-setup": "mkdir -p fonts && cp ./node_modules/pearson-elements/dist/fonts/* ./fonts && cp ./node_modules/pearson-elements/dist/css/elements.css ./demo",
-    "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool source-map --hot --progress --colors",
+    "dev": "npm run dev-setup && webpack-dev-server --port 8080 --devtool source-map --hot --progress --colors",
     "pretest": "npm run lint",
     "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --require test/utils/dom.js",
     "build": "webpack -p",
@@ -28,7 +28,7 @@
     "react-intl": "~2.0.1"
   },
   "devDependencies": {
-    "@pearson-components/npm-scripts": "^0.1.0",
+    "@pearson-components/npm-scripts": "^0.3.6",
     "babel-core": "~6.3.17",
     "babel-eslint": "~4.1.6",
     "babel-loader": "~6.2.0",
@@ -47,6 +47,7 @@
     "expect-jsx": "~2.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "~0.8.5",
+    "fs-extra": "^1.0.0",
     "intl": "~1.1.0",
     "jsdom": "~8.5.0",
     "json-loader": "~0.5.4",
