--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ci": "npm test && npm run build",
     "release": "node ./npm_scripts/release.js",
     "verify": "node ./npm_scripts/verify.js",
-    "postinstall": "node ./npm_scripts/cross-platform.js",
+    "postinstall": "node ./node_modules/@pearson-components/npm-scripts/npm_scripts/cross-platform.js",
     "postpublish": "npm access public && echo 'Package scope set to public!'"
   },
   "author": "pearson-design-accelerator@pearson.com",
