--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slider component",
   "main": "./main.js",
   "scripts": {
-    "dev-setup": "mkdir -p fonts && cp ./node_modules/pearson-elements/dist/fonts/* ./fonts && cp ./node_modules/pearson-elements/dist/css/elements.css ./demo",
+    "dev-setup": "node ./npm_scripts/dev-setup.js",
     "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool source-map --hot --host 0.0.0.0 --progress --colors",
     "start": "npm run dev",
     "pretest": "npm run lint",
