fix: update utility scripts to remove postinstall hook.

--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
   "main": "./main.js",
   "scripts": {
     "dev-setup": "node ./npm_scripts/dev-setup.js",
-    "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool source-map --hot --host 0.0.0.0 --progress --colors",
+    "dev": "node ./npm_scripts/dev.js",
     "start": "npm run dev",
-    "pretest": "npm run lint",
-    "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --require test/utils/dom.js",
-    "build": "webpack -p",
-    "lint": "eslint src/js/** demo/demo.js",
+    "pretest": "node ./npm_scripts/pretest.js",
+    "test": "node ./npm_scripts/test.js",
+    "build": "node ./npm_scripts/build.js",
+    "lint": "node ./npm_scripts/lint.js",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
-    "version": "npm run gen-changelog && git add CHANGELOG.md",
-    "ci": "npm test && npm run build",
+    "version": "node ./npm_scripts/version.js",
+    "ci": "node ./npm_scripts/ci.js",
     "release": "node ./npm_scripts/release.js",
     "verify": "node ./npm_scripts/verify.js",
-    "postinstall": "node ./node_modules/@pearson-components/npm-scripts/npm_scripts/cross-platform.js",
-    "postpublish": "npm access public && echo 'Package scope set to public!'"
+    "copy-utils": "node ./node_modules/@pearson-components/npm-scripts/npm_scripts/cross-platform.js"
   },
   "author": "pearson-design-accelerator@pearson.com",
   "license": "MIT",
@@ -30,7 +29,7 @@
     "react-intl": "~2.0.1"
   },
   "devDependencies": {
-    "@pearson-components/npm-scripts": "^0.3.7",
+    "@pearson-components/npm-scripts": "^0.3.11",
     "babel-core": "~6.3.17",
     "babel-eslint": "~4.1.6",
     "babel-loader": "~6.2.0",
