--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "~0.8.5",
     "fs-extra": "^1.0.0",
+    "ignore-styles": "^5.0.1",
     "intl": "~1.1.0",
     "jsdom": "~8.5.0",
     "json-loader": "~0.5.4",
