Docs: Update LICENSE

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "copy-utils": "node ./node_modules/@pearson-components/npm-scripts/npm_scripts/cross-platform.js"
   },
   "author": "pearson-design-accelerator@pearson.com",
-  "license": "MIT",
+  "license": "PEARSON PROPRIETARY AND CONFIDENTIAL INFORMATION SUBJECT TO NDA",
   "repository": {
     "type": "git",
     "url": "https://github.com/Pearson-Higher-Ed/slider.git"
